--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
             <a href="#">Project 5</a>
-            <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <h2>12345567889</h2>
+            <p>phanivalanka@email.com</p>
         </div>
     </div>
 </body>
